--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-
+/* body */
 .body {
-     background-color:  #FFFFFF;
-     font-family: "Roboto", sans-serif;
-     font-size: 16px;
-     line-height: 150%;
-     color: #434455
+    background-color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #434455;
 }
-
 
 /* header */
 .logo {
@@ -18,10 +17,13 @@
     font-weight: 700;
     font-family: "Raleway", sans-serif;
 }
+
 .dark {
-    color: #2e2f42;}
+    color: #2e2f42;
+}
+
 .light {
-    color: #F4F4FD;   
+    color: #F4F4FD;
 }
 
 .wrapper {
@@ -31,6 +33,17 @@
     font-weight: 500;
 }
 
+.header-list {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; /* Added to remove default margin */
+}
+
+.header-item {
+    display: inline; /* Optional: to display items in a line */
+    margin-right: 20px; /* Optional: spacing between items */
+}
+
 .nav-link {
     font-weight: 500;      
     font-size: 16px;        
@@ -38,12 +51,11 @@
     letter-spacing: 0.02em;  
     color: #2e2f42;        
 }
-.nav-link:hover {
-    color: #404bbf;}
 
+.nav-link:hover, 
 .nav-link:focus {
-    color: #404bbf;}
-
+    color: #404bbf;
+}
 
 .address-info {
     font-style: normal;
@@ -53,12 +65,28 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;}
+    color: #434455;
+}
 
 .contact-link:hover,
 .contact-link:focus {
-   color: #404bbf; }
+    color: #404bbf;
+}
 
+/* Address styles */
+.address {
+    font-style: normal; /* Ensuring no italic style is applied */
+}
+
+.address-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; /* Added to remove default margin */
+}
+
+.address-item {
+    margin-bottom: 10px; /* Optional: space between address items */
+}
 
 
 
@@ -92,16 +120,14 @@
 
 
 /* section2 */
-.benefits {
-    padding: 20px;
-}
 
 .benefits-title {
+
     color: #2e2f42;
-    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    font-weight: 500;
 
 }
 .benefits-list {
