--- a/css/style.css
+++ b/css/style.css
@@ -8,85 +8,54 @@
 }
 
 /* header */
-.logo {
-    color: #4d5ae5;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    line-height: 1.17;
-    font-size: 18px;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif;
+.header {
 }
-
-.dark {
-    color: #2e2f42;
+.logo-nav {
 }
-
-.light {
-    color: #F4F4FD;
-}
-
 .wrapper {
+}
+
+.logo-main {color: #4d5ae5;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.dark {
+  color: #2e2f42;
+} 
+
+.header-list {
+}
+.header-item {
+}
+.nav-link {color: #2e2f42;
     letter-spacing: 0.02em;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 500;
 }
-
-.header-list {
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; /* Added to remove default margin */
-}
-
-.header-item {
-    display: inline; /* Optional: to display items in a line */
-    margin-right: 20px; /* Optional: spacing between items */
-}
-
-.nav-link {
-    font-weight: 500;      
-    font-size: 16px;        
-    line-height: 1.5;       
-    letter-spacing: 0.02em;  
-    color: #2e2f42;        
-}
-
-.nav-link:hover, 
+.nav-link:hover,
 .nav-link:focus {
-    color: #404bbf;
-}
+    color: #404bbf;}
 
-.address-info {
-    font-style: normal;
+.address {
 }
-
-.contact-link {
-    font-size: 16px;
+.address-list {
+}
+.address-item {
+}
+.contact-link {font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
-
 .contact-link:hover,
 .contact-link:focus {
-    color: #404bbf;
-}
-
-/* Address styles */
-.address {
-    font-style: normal; /* Ensuring no italic style is applied */
-}
-
-.address-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0; /* Added to remove default margin */
-}
-
-.address-item {
-    margin-bottom: 10px; /* Optional: space between address items */
-}
+    color: #404bbf;}
 
 
 
@@ -232,3 +201,4 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
